2002-10-23  Richard M. Stallman  <rms@gnu.org>

	* progmodes/compile.el (compile-internal): Update process-environment
	before calling start-process.

	* emacs-lisp/easy-mmode.el (define-minor-mode):
	Don't call eval-after-load while building Emacs.

	* simple.el (display-message-or-buffer): Don't try to display
	an empty output in the echo area.

	* gud.el (gud-gdb-massage-args): Pass default-directory to gdb.

	* Makefile.in (compile-files): Protect from shell bugs.

2002-10-21  Juanma Barranquero  <lektu@terra.es>

	* wid-edit.el (widget-choose): Fix typo.

	* calendar/diary-lib.el (diary-name-pattern): Likewise.

	* emacs-lisp/elint.el (elint-error, elint-warning): Likewise.

	* emacs-lisp/lisp.el (beginning-of-defun): Likewise.

	* emulation/edt-mapper.el (top-level): Likewise.

	* eshell/esh-var.el (eshell/define): Likewise.

	* mail/feedmail.el (feedmail-nuke-body-in-fcc)
	(feedmail-queue-draft-directory): Likewise.

	* net/ange-ftp.el (ange-ftp-ls): Likewise.

	* obsolete/cplus-md.el (c++-empty-arglist-indent): Likewise.

	* progmodes/cperl-mode.el (cperl-invert-if-unless): Likewise.

	* progmodes/ebrowse.el (ebrowse-ts)
	(ebrowse-view/find-file-and-search-pattern): Likewise.

	* progmodes/f90.el (f90-insert-end): Likewise.

	* progmodes/hideif.el (hide-ifdef-region): Likewise.

	* progmodes/sh-script.el (sh-indent-for-then): Likewise.

	* textmodes/bibtex.el (bibtex-find-entry-location): Likewise.

	* textmodes/sgml-mode.el (html-imenu-index): Likewise.

	* emacs-lisp/edebug.el (edebug-gensym): Fix spacing.

2002-10-16  Juanma Barranquero  <lektu@terra.es>

	* vc-hooks.el (vc-insert-file): Fix typo.

	* replace.el (occur): Likewise.

	* subr.el (remove, remq): Likewise.

2002-10-15  Dave Love  <fx@gnu.org>

	* man.el (Man-getpage-in-background): Set width in environment.

2002-10-15  Andre Spiegel  <spiegel@gnu.org>

	* vc-hooks.el (vc-workfile-unchanged-p,
	vc-default-workfile-unchanged-p): Moved here from vc.el.
